--- a/style.css
+++ b/style.css
@@ -74,6 +74,9 @@ h1 , h2 , h3 , h4 , h5{
   flex-flow: column;
   flex-wrap: nowrap;
 }
+.news_container{
+  margin: auto;
+}
 .y_spacer_medium{
   margin-bottom: 25px;
 }
@@ -103,11 +106,39 @@ h1 , h2 , h3 , h4 , h5{
 .picture{
   height: 400px;
 }
+#zoomed_image{
+  position: fixed;
+  z-index: 2001;
+}
 .picture:not(:last-child){
   margin-right: 7px;
 }
-.location , .news{
+#zoom_blur_background{
+  display: none;
+  opacity: 0;
+  transition: opacity 2s;
+}
+html.zoom #zoom_blur_background{
+  display: block;
+  background-color: black;
+  position: fixed;
+  width: 100%;
+  height: 100%;
+  z-index: 2000;
+  opacity: 0.9;
+}
+.location , .news, .date{
+  width: fit-content;
   margin: auto;
+}
+html.mobile .location_text{
+  font-size: xx-large;
+}
+html.mobile .news_text{
+  font-size: x-large;
+}
+html.phone .date_text{
+  font-size: x-large;
 }
 #upcoming_text{
     margin-top: 15px;
@@ -120,7 +151,7 @@ h1 , h2 , h3 , h4 , h5{
 .location_link{
     text-decoration: none
 }
-.location_text , .news_text{
+.location_text , .news_text , .date_text{
   vertical-align: super;
   color: #ea4335;
   text-decoration: none;
